Logistician api endpoint added
